unpackaged/main/default/objects/Account/fields/Account_Automation__c.field-meta.xml
<CustomField>
    <fullName>Account_Automation__c</fullName>
    <label>Account Automation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MLP - Create</fullName>
            </value>
            <value>
                <fullName>MLP - Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>