unpackaged/main/default/objects/Account/fields/Account_Automation_Input__c.field-meta.xml
<CustomField>
    <fullName>Account_Automation_Input__c</fullName>
    <label>Account Automation Input</label>
    <length>255</length>
    <type>Text</type>
</CustomField>