unpackaged/main/default/objects/Account/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>The 16 digit account number associated with this account.</description>
    <inlineHelpText>The 16 digit account number associated with this account.</inlineHelpText>
    <label>Account Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>