unpackaged/main/default/objects/Account/fields/Account_Owner_List_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_List_Formula__c</fullName>
    <formula>IF(Owner.Id=$User.Id,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner List Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>