unpackaged/main/default/objects/Account/fields/AccountID18__c.field-meta.xml
<CustomField>
    <fullName>AccountID18__c</fullName>
    <description>The full Account ID needed in external applications</description>
    <inlineHelpText>The full Account ID needed in external applications</inlineHelpText>
    <label>AccountID18</label>
    <length>18</length>
    <type>Text</type>
</CustomField>