unpackaged/main/default/objects/Account/fields/AcctOwnerProduct__c.field-meta.xml
<CustomField>
    <fullName>AcctOwnerProduct__c</fullName>
    <formula>TEXT(Owner.Product_Eligibility__c)</formula>
    <label>AcctOwnerProduct</label>
    <type>Text</type>
</CustomField>