unpackaged/main/default/objects/Account/fields/Active_Merchant_Renewal_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Active_Merchant_Renewal_Opportunities__c</fullName>
    <description>This field will count the number of active merchant renewal opportunities associated with an account.</description>
    <inlineHelpText>This field will count the number of active merchant renewal opportunities associated with an account.</inlineHelpText>
    <label>Active Merchant Renewal Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Working Capital Oppty</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>CONCURRENT, RENEWAL, RENEWAL CONCURRENT</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Statements In - MCA, Pre-Qual MCA, Approved - MCA, Offer Out - MCA, Offer In - MCA, Docs Out - MCA, Docs In - MCA, Submission - MCA/ALT, Conversion, Internal Pend Info, Lender Pend Info, Resubmit</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>