unpackaged/main/default/objects/Account/fields/Actuals_Split_Points_Low__c.field-meta.xml
<CustomField>
    <fullName>Actuals_Split_Points_Low__c</fullName>
    <label>Split Points Low</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>