unpackaged/main/default/objects/Account/fields/AGS_Range__c.field-meta.xml
<CustomField>
    <fullName>AGS_Range__c</fullName>
    <description>This field will indicate a range in which the customer's AGS is in.</description>
    <formula>IF(AnnualRevenue &lt; 100000, "R1: 0-99k", 
IF(AnnualRevenue &lt; 250000, "R2: 100-249k",
IF(AnnualRevenue &lt; 500000, "R3: 250-499k", 
IF(AnnualRevenue &lt; 1000000, "R4: 500-999k", 
IF(AnnualRevenue &lt; 2500000, "R5: 1,000-2,499k", 
IF(AnnualRevenue &gt;= 2500000, "R6: 2.5M+","Not Captured"))))))</formula>
    <inlineHelpText>This field will indicate a range in which the customer's AGS is in.</inlineHelpText>
    <label>AGS - Range</label>
    <type>Text</type>
</CustomField>