unpackaged/main/default/objects/Account/fields/API_Lender__c.field-meta.xml
<CustomField>
    <fullName>API_Lender__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine if leads/opportunities can be sent to the lender via API</description>
    <label>API Lender</label>
    <type>Checkbox</type>
</CustomField>