unpackaged/main/default/objects/Account/fields/Approve_E_Sign_Application__c.field-meta.xml
<CustomField>
    <fullName>Approve_E_Sign_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Broker E-Sign Application has been approved through BofI</inlineHelpText>
    <label>Approve E-Sign Application</label>
    <type>Checkbox</type>
</CustomField>