unpackaged/main/default/objects/Account/fields/Assistant_Phone_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Phone_Workflow__c</fullName>
    <description>This field is for a workflow that will update a contact's assistants information.</description>
    <inlineHelpText>This field is for a workflow that will update a contact's assistants information.</inlineHelpText>
    <label>Assistant Phone - Workflow</label>
    <type>Phone</type>
</CustomField>