unpackaged/main/default/objects/Account/fields/Balance_Paid_Recent_Deal__c.field-meta.xml
<CustomField>
    <fullName>Balance_Paid_Recent_Deal__c</fullName>
    <label>Balance Paid % Recent Deal</label>
    <summarizedField>Opportunity.Balance_Paid_Percent__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Working Capital Oppty</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Funded</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Internal_Funding_Status__c</field>
        <operation>equals</operation>
        <value>Funded, Term Completed, Paid Off Early</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>