unpackaged/main/default/objects/Account/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <description>The customer's bank account number.</description>
    <inlineHelpText>Enter the customer's bank account number.</inlineHelpText>
    <label>Bank Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>