unpackaged/main/default/objects/Account/fields/Bank_Phone__c.field-meta.xml
<CustomField>
    <fullName>Bank_Phone__c</fullName>
    <description>The phone number for the customer's bank.</description>
    <inlineHelpText>Enter the phone number for the customer's bank.</inlineHelpText>
    <label>Bank Phone</label>
    <type>Phone</type>
</CustomField>