unpackaged/main/default/objects/Account/fields/Bank_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Routing_Number__c</fullName>
    <label>Bank Routing Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>