unpackaged/main/default/objects/Account/fields/BBB_Review__c.field-meta.xml
<CustomField>
    <fullName>BBB_Review__c</fullName>
    <label>BBB Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Broker_Management_Status</valueSetName>
    </valueSet>
</CustomField>