unpackaged/main/default/objects/Account/fields/BBB_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>BBB_Review_Notes__c</fullName>
    <label>BBB Review Notes</label>
    <type>TextArea</type>
</CustomField>