unpackaged/main/default/objects/Account/fields/Broker_Approved__c.field-meta.xml
<CustomField>
    <fullName>Broker_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that the Broker has been approved</inlineHelpText>
    <label>Broker Approved</label>
    <type>Checkbox</type>
</CustomField>