unpackaged/main/default/objects/Account/fields/Broker_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Broker_Approved_By__c</fullName>
    <inlineHelpText>Auto-populates via workflow when the broker has been approved</inlineHelpText>
    <label>Broker Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>