unpackaged/main/default/objects/Account/fields/Broker_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Broker_Approved_Date__c</fullName>
    <inlineHelpText>Populated via workflow when the Broker Approved checkbox is marked True</inlineHelpText>
    <label>Broker Approved Date</label>
    <type>DateTime</type>
</CustomField>