unpackaged/main/default/objects/Account/fields/Broker_Casesafe_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Broker_Casesafe_User_Id__c</fullName>
    <label>Broker Casesafe User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>