unpackaged/main/default/objects/Account/fields/BROKER_CUSTOMER_ACCOUNT_ALERT__c.field-meta.xml
<CustomField>
    <fullName>BROKER_CUSTOMER_ACCOUNT_ALERT__c</fullName>
    <formula>IF(Funded_WC_Broker_Opptys__c  &gt;= 1, "THIS IS A RENEWAL BROKER CUSTOMER ACCOUNT, PLEASE SEND TO LAUREN MARTIN", "THIS IS A BROKER CUSTOMER ACCOUNT, PLEASE SEND TO BOB ANTHONY")</formula>
    <label>BROKER CUSTOMER ACCOUNT ALERT</label>
    <type>Text</type>
</CustomField>