unpackaged/main/default/objects/Account/fields/Broker_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Broker_Decline_Reason__c</fullName>
    <label>Broker Decline Reason</label>
    <type>TextArea</type>
</CustomField>