unpackaged/main/default/objects/Account/fields/Broker_Declined__c.field-meta.xml
<CustomField>
    <fullName>Broker_Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures if the Broker was declined after review.</description>
    <inlineHelpText>Check this box to decline this Broker after review.</inlineHelpText>
    <label>Broker Declined</label>
    <type>Checkbox</type>
</CustomField>