unpackaged/main/default/objects/Account/fields/Broker_Declined_By__c.field-meta.xml
<CustomField>
    <fullName>Broker_Declined_By__c</fullName>
    <description>User who declined the Broker. Populated via workflow.</description>
    <inlineHelpText>User who declined the Broker. Populated via workflow.</inlineHelpText>
    <label>Broker Declined By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>