unpackaged/main/default/objects/Account/fields/Broker_Declined_Date__c.field-meta.xml
<CustomField>
    <fullName>Broker_Declined_Date__c</fullName>
    <description>Date the Broker was declined.</description>
    <inlineHelpText>Date the Broker was declined.</inlineHelpText>
    <label>Broker Declined Date</label>
    <type>DateTime</type>
</CustomField>