unpackaged/main/default/objects/Account/fields/Broker_Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Broker_Email_Domain__c</fullName>
    <label>Broker Email Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>