unpackaged/main/default/objects/Account/fields/Broker_Refresh_Completed__c.field-meta.xml
<CustomField>
    <fullName>Broker_Refresh_Completed__c</fullName>
    <label>Broker Refresh Completed</label>
    <type>Date</type>
</CustomField>