unpackaged/main/default/objects/Account/fields/Broker_Refresh_Due__c.field-meta.xml
<CustomField>
    <fullName>Broker_Refresh_Due__c</fullName>
    <label>Broker Refresh Due</label>
    <type>Date</type>
</CustomField>