unpackaged/main/default/objects/Account/fields/Broker_Refresh_Status__c.field-meta.xml
<CustomField>
    <fullName>Broker_Refresh_Status__c</fullName>
    <label>Broker Refresh Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker Refresh Pending</fullName>
            </value>
            <value>
                <fullName>Additional Information Needed</fullName>
            </value>
            <value>
                <fullName>Broker Refresh Completed</fullName>
            </value>
            <value>
                <fullName>Agreement Out</fullName>
            </value>
            <value>
                <fullName>Agreement In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>