unpackaged/main/default/objects/Account/fields/Bus_License_Verification__c.field-meta.xml
<CustomField>
    <fullName>Bus_License_Verification__c</fullName>
    <description>The account's business License.</description>
    <inlineHelpText>The account's business License.</inlineHelpText>
    <label>Bus License Verification</label>
    <length>64</length>
    <type>Text</type>
</CustomField>