unpackaged/main/default/objects/Account/fields/Business_Day_14th__c.field-meta.xml
<CustomField>
    <fullName>Business_Day_14th__c</fullName>
    <formula>CASE( MOD( Rep_Ownership_Date__c - DATE( 1900, 1, 7 ), 7 ), 
0, Rep_Ownership_Date__c + 0 + 5 + 2 + 5 + 2 + 4, /* Sun:Rep_Ownership_Date__c+0 wknd day+5 days +2wknd days +5days + 2wknd days +4days */ 
2, Rep_Ownership_Date__c + 3 + 2 + 5 + 2 + 5 + 2 +1, /* Wed:Rep_Ownership_Date__c +3 day+2 wknd days +5days +2wknd days + 5days +2wknd days +1day*/ 
3, Rep_Ownership_Date__c + 2 + 2 + 5 + 2 + 5 + 2 + 2, /* Wed:Rep_Ownership_Date__c +2 day+2 wknd days +5days + 2wknd days +5days + 2wknd days +2days*/ 
4, Rep_Ownership_Date__c + 1 + 2 + 5 + 2 + 5 + 2 + 3, /* Thr:Rep_Ownership_Date__c +1 day +2wknd days +5days +2wknd +5days +2wknd +3days*/ 
5, Rep_Ownership_Date__c + 2 + 5 + 2 + 5 + 2 + 4, /* Fri:Rep_Ownership_Date__c+2 wknd days +5days +2wknd +5days +2wknd +4days*/ 
6, Rep_Ownership_Date__c + 1 + 5 + 2 + 5 + 2 + 4, /* Sat:Rep_Ownership_Date__c+1 wknd days +5days +2wknd +5days +2wknd +4days*/ 
Rep_Ownership_Date__c + 4 + 2 + 5 + 2 + 5 /* Default (Mon):Rep_Ownership_Date__c+4day +2wknd +5days + 2wknd +5days */ 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Day (14th)</label>
    <type>Date</type>
</CustomField>