unpackaged/main/default/objects/Account/fields/Business_Instant_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_Instant_ID__c</fullName>
    <label>Business Instant ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Broker_Management_Status</valueSetName>
    </valueSet>
</CustomField>