unpackaged/main/default/objects/Account/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <description>If values are being added to this list, they also need to be added to the Accepted Business Types field on the Lender Profile object and Business Type field on the Customer Form object. Standard value set isn't being used because this fields is populated by webservice - decoupling the need to add values across front end and salesforce</description>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>S Corp</fullName>
            </value>
            <value>
                <fullName>C Corp</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>