unpackaged/main/default/objects/Account/fields/CA_Lender_s_License_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>CA_Lender_s_License_Approved_Date__c</fullName>
    <label>CA Lender's License Approved Date</label>
    <type>DateTime</type>
</CustomField>