unpackaged/main/default/objects/Account/fields/Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID__c</fullName>
    <description>The campaign ID that "started the conversation" with FPC</description>
    <inlineHelpText>The campaign ID that "started the conversation" with FPC</inlineHelpText>
    <label>Campaign ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>