unpackaged/main/default/objects/Account/fields/CAN_Exclusivity_Relinquished__c.field-meta.xml
<CustomField>
    <fullName>CAN_Exclusivity_Relinquished__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is an indicator that we received notice from CAN that their exclusivity period is now over with a funded customer.</description>
    <inlineHelpText>This is an indicator that we received notice from CAN that their exclusivity period is now over with a funded customer.</inlineHelpText>
    <label>CAN Exclusivity Relinquished</label>
    <type>Checkbox</type>
</CustomField>