unpackaged/main/default/objects/Account/fields/CC_Processor__c.field-meta.xml
<CustomField>
    <fullName>CC_Processor__c</fullName>
    <description>CC processor</description>
    <inlineHelpText>Enter CC Processor</inlineHelpText>
    <label>CC Processor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>