unpackaged/main/default/objects/Account/fields/Chargeoff_Notes__c.field-meta.xml
<CustomField>
    <fullName>Chargeoff_Notes__c</fullName>
    <label>Chargeoff Notes</label>
    <type>TextArea</type>
</CustomField>