unpackaged/main/default/objects/Account/fields/Collections_Engagement_Status__c.field-meta.xml
<CustomField>
    <fullName>Collections_Engagement_Status__c</fullName>
    <label>Collections Engagement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Weekly Touch</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Need Banks</fullName>
            </value>
            <value>
                <fullName>Problem Child</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>