unpackaged/main/default/objects/Account/fields/Collector__c.field-meta.xml
<CustomField>
    <fullName>Collector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collector</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_Collector</relationshipName>
    <type>Lookup</type>
</CustomField>