unpackaged/main/default/objects/Account/fields/Company_DBA__c.field-meta.xml
<CustomField>
    <fullName>Company_DBA__c</fullName>
    <description>The company's "Doing Business As" Name</description>
    <inlineHelpText>The company's "Doing Business As" Name</inlineHelpText>
    <label>Company DBA</label>
    <length>128</length>
    <type>Text</type>
</CustomField>