unpackaged/main/default/objects/Account/fields/Comprehensive_Person_Search_PG2__c.field-meta.xml
<CustomField>
    <fullName>Comprehensive_Person_Search_PG2__c</fullName>
    <label>Comprehensive Person Search- PG2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Broker_Management_Status</valueSetName>
    </valueSet>
</CustomField>