unpackaged/main/default/objects/Account/fields/Contingency_Payout_Method__c.field-meta.xml
<CustomField>
    <fullName>Contingency_Payout_Method__c</fullName>
    <label>Contingency Payout Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net Paid to National Funding</fullName>
            </value>
            <value>
                <fullName>Contingency Paid to Local Counsel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>