unpackaged/main/default/objects/Account/fields/Contingency_Percent__c.field-meta.xml
<CustomField>
    <fullName>Contingency_Percent__c</fullName>
    <description>Legal Field</description>
    <label>Contingency Percent (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>