unpackaged/main/default/objects/Account/fields/convertedLeadStatus__c.field-meta.xml
<CustomField>
    <fullName>convertedLeadStatus__c</fullName>
    <defaultValue>"Not Set"</defaultValue>
    <label>convertedLeadStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Set</fullName>
                <default>true</default>
                <label>Not Set</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>