unpackaged/main/default/objects/Account/fields/Core_Product_Offered__c.field-meta.xml
<CustomField>
    <fullName>Core_Product_Offered__c</fullName>
    <label>Core Product Offered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Merchant Processor</fullName>
            </value>
            <value>
                <fullName>Equipment Lessor</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Personal Credit Provider</fullName>
            </value>
            <value>
                <fullName>Business Lender (alt product)</fullName>
            </value>
            <value>
                <fullName>SBA Lender</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>