unpackaged/main/default/objects/Account/fields/Credit_Grade__c.field-meta.xml
<CustomField>
    <fullName>Credit_Grade__c</fullName>
    <description>The grade associated with the lowest credit score of all the contacts for this account.</description>
    <label>Credit Grade</label>
    <length>16</length>
    <type>Text</type>
</CustomField>