unpackaged/main/default/objects/Account/fields/Current_Lenders__c.field-meta.xml
<CustomField>
    <fullName>Current_Lenders__c</fullName>
    <description>The current Lenders associated with a Broker Account. Used for merging the Broker Approval email.</description>
    <inlineHelpText>Lenders associated with Broker Account.</inlineHelpText>
    <label>Current Lenders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>