unpackaged/main/default/objects/Account/fields/Current_Rep_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Rep_Count__c</fullName>
    <label>Current Rep Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>