unpackaged/main/default/objects/Account/fields/Custom_Lender_Profile_Matches__c.field-meta.xml
<CustomField>
    <fullName>Custom_Lender_Profile_Matches__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Lender Profile Matches</label>
    <type>Checkbox</type>
</CustomField>