unpackaged/main/default/objects/Account/fields/Date_Established__c.field-meta.xml
<CustomField>
    <fullName>Date_Established__c</fullName>
    <description>Date Business Established</description>
    <inlineHelpText>Enter Date business was established</inlineHelpText>
    <label>Date Established</label>
    <type>Date</type>
</CustomField>