unpackaged/main/default/objects/Account/fields/Days_Since_Activation__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Activation__c</fullName>
    <formula>TODAY() -  Activation_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Activation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>