unpackaged/main/default/objects/Account/fields/Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do Not Call</description>
    <inlineHelpText>Check the box if the customer does not want to be called.</inlineHelpText>
    <label>Do Not Call</label>
    <type>Checkbox</type>
</CustomField>