unpackaged/main/default/objects/Account/fields/Do_Not_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_E_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do Not Email</description>
    <inlineHelpText>Check box to halt email to account.</inlineHelpText>
    <label>Do Not E-Mail</label>
    <type>Checkbox</type>
</CustomField>