unpackaged/main/default/objects/Account/fields/Do_Not_Fax__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Fax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do Not Fax</description>
    <inlineHelpText>Check box to halt faxes to account.</inlineHelpText>
    <label>Do Not Fax</label>
    <type>Checkbox</type>
</CustomField>