unpackaged/main/default/objects/Account/fields/Do_Not_Mail__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to halt mail to account.</description>
    <inlineHelpText>Check box to halt mail to account.</inlineHelpText>
    <label>Do Not Mail</label>
    <type>Checkbox</type>
</CustomField>