unpackaged/main/default/objects/Account/fields/Do_Not_Solicit__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Solicit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box indicates the customer does not want ANY solicitation from us in the future.</description>
    <inlineHelpText>Checking this box indicates the customer does not want ANY solicitation from us in the future.</inlineHelpText>
    <label>Do Not Solicit</label>
    <type>Checkbox</type>
</CustomField>