unpackaged/main/default/objects/Account/fields/DPBC__c.field-meta.xml
<CustomField>
    <fullName>DPBC__c</fullName>
    <description>Data Point Bar Code</description>
    <label>DPBC</label>
    <length>16</length>
    <type>Text</type>
</CustomField>